bug: prevent overflow from random display size

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ menu {
 }
 
 .choice {
-    font-size: clamp(2rem, 100vh, 20rem);
+    font-size: clamp(15rem, min(50vw, 75vh), 30rem);
     line-height: 1;
     cursor: pointer;
 
